static semantic checking bug fixing